--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Foo bar",
   "version": "1.0",
   "description": "This is a meaningful chrome extension.",
-  "icons": { 
+  "icons": {
     "128": "icon_128.png",
     "16": "icon_16.png"
   },
   "background": {
-    "persistent": false,
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   },
   "commands" : {
     "foo": {
